@@ -3,6 +3,7 @@ Release date: May 6, 2020
 * Added: Advanced Accordion - Title HTML tag option
 * Fixed: Instagram Feed - Square images option was not working
 * Fixed: Image Hotspots - Dynamic link tags were not working
+* Added: Icon List - Background color and hover colors for text
 
 == 1.2.9.3 ==
 Release date: April 20, 2020
